@@ -1,4 +1,6 @@
 2008-??-??
+Added warning if non-unique scantimes are detected to xcmsRaw()
+rawEIC() verifies the scanrange  
 findPeaks.centWave generates a warning if data seems to be not in centroid mode
 Added method isCentroided()
 Added prefilter option to findPeaks.centWave
